the year on index page welcome is now dynamic, spacing fixed for judge login button

--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -574,6 +574,8 @@ div.centerTextContainer h3 {
     border-radius: 10px;
     width: 46%;
 	box-shadow: 2px 2px 2px orange;
+	display: flex;
+	justify-content: center;
 }
 
 .judgeLogin:hover {
